Hack to prevent scrollbars on dialog opening.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@ body {
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
 	font-size: 10px;
 	color: #333;
+	overflow: hidden;
 }
 
 h1 {
